# OpenGL-3D-Render-Recorder

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  lib_build_info.txt
.github/workflows/: cmake-multi-platform.yml
images/output/: ffmpeg-frames-to-mp4.txt
include/: bzlib.h
include/brotli/: decode.h  encode.h  port.h  shared_dictionary.h
include/ffmpeg_windows/libavutil/: ffversion.h
include/freetype2/freetype/config/: ftoption.h
include/glad/: glad.h
include/graphite2/: Font.h  Log.h  Segment.h  Types.h
include/harfbuzz/: hb-features.h  hb-ft.h  hb-version.h
include/imgui/: MSYS2 commands.txt
include/implot/: implot.h  implot_internal.h
include/learnopengl/: Config.h  Settings.h  camera.h  encoder.h  font.h  fontmanager.h  gui.h  shader_s.h  text.h  textrenderer.h  timer.h
include/libavutil/: ffversion.h
include/libpng16/: png.h  pnglibconf.h
shaders/: atlas.frag  atlas.vert  crates.frag  crates.vert  flip.frag  flip.vert  light.frag  light.vert  quad.frag  quad.vert  text_shader.frag  text_shader.vert
src/: 3.3.shader.frag  3.3.shader.fs  3.3.shader.vert  4.1.shader.frag  Config.cpp  Settings.cpp  encoder.cpp  ffmpeg_log.txt  font.cpp  fontmanager.cpp  glad.c  gui.cpp  main.cpp  quad.frag  quad.vert  text_shader.frag  text_shader.vert  textrenderer.cpp  timer.cpp
